--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -27,7 +27,7 @@
     </div>
     <div class="col w-1-2">
       <p class="larger hdr txt--red">Data Driven Experiences</p>
-      <p class="normal">The ability to process and understand user and environmental data in real time to provide a customised experience for the individual across multiple touch-points, improving engagement and optimising conversion.</p>
+      <p class="normal"><strong>DADI</strong> processes and understands user and environmental data in real time to provide a customised experience for the individual across multiple touch-points.</p>
     </div>
   </div>
 </div>
