--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -26,7 +26,7 @@
     <img src="/assets/img/illo-dde.jpg" width="340">
     </div>
     <div class="col w-1-2">
-      <p class="larger hdr txt--red">Data Driven Experiences</p>
+      <p class="larger hdr txt--red">Data Driven Experiences™</p>
       <p class="normal"><strong>DADI</strong> processes and understands user and environmental data in real time to provide a customised experience for the individual across multiple touch-points.</p>
     </div>
   </div>
