--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -75,7 +75,7 @@
 {>"partials/solutions/list" /}
 
 <div class="container pad--x2 alignc">
-  <p class="alignauto kilo hdr">“Moving <a href="http://whatcar.com" class="txt--red">whatcar.com</a> to DADI reduced our infrastructure<br>costs by 62%”</p>
+  <p class="alignauto kilo hdr">“Moving <a href="http://whatcar.com" class="txt--red">whatcar.com</a> to DADI significantly reduced our infrastructure<br>costs”</p>
   <p class="alignauto txt--mid-grey">Product Lead, <strong>Haymarket Consumer Media</strong></p>
 
   <div class="pad__top--x2 marg__top pad__bottom"><a href="/successes/" class="btn btn--red normal">See all customer stories</a></div>
