--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -128,7 +128,7 @@
   </footer>
 </div>
 
-{! Google Analytics
+{! Google Analytics !}
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -136,7 +136,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','{global.protocol}www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-42395806-1', 'auto');
 ga('send', 'pageview');
-</script> !}
+</script>
 
 <script src="/assets/js/main.js"></script>
 </body>
