--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -1,6 +1,6 @@
 {>"partials/header" /}
 
-{<title}Welcome{/title}
+{<title}Target individuals. Not segments.{/title}
 
 {<top}
   <div class="grid">
