--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -11,8 +11,8 @@ body.dark {
 }
 
 .container {
-	margin-left: 5%;
-	margin-right: 5%;
+	padding-left: 8%;
+	padding-right: 8%;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 960px;
