--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -10,7 +10,7 @@
       <p class="normal pad__top"><a href="/solutions/" class="btn btn--blue">Learn how</a></p>
     </div>
     {@iter items=insights from=0 to=2}
-      <div class="col w-1-3 {@eq key="{$idx}" value="1"}col--pull bs-hide{/eq}">
+      <div class="col w-1-3 pad__bottom {@eq key="{$idx}" value="1"}col--pull bs-hide{/eq}">
         <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p>
         <p class="hdr large txt--green"><a href="/insight/{handle}/">{attributes.title}</a></p>
         <p class="small">{@soberMarkdown}{@Truncate data="{attributes.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
