--- a/web/workspace/partials/header.dust
+++ b/web/workspace/partials/header.dust
@@ -11,7 +11,7 @@
 
 <body class="{+bodyClass}light{/bodyClass}">
 
-<div class="top top--{params.section}">
+<div class="top {?params.section}top--{params.section}{/params.section}">
   <div class="container"> 
     {>"partials/navigation" /}
     {+top}{/top}
