--- a/web/workspace/partials/platform/product.dust
+++ b/web/workspace/partials/platform/product.dust
@@ -18,7 +18,7 @@
 
     <ul class="list--no-style grid normal">
       {#keyPoints}
-        <li class="col w-1-3">
+        <li class="col w-1-3 pad__bottom">
           <strong class="block">{title}</strong> {@soberMarkdown}{description}{/soberMarkdown}
         </li>
       {/keyPoints}
