--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -293,10 +293,14 @@ form {
 }
 
 
-.product__logo {
+.product-logo {
     display: block;
     height: 80px;
     margin: 40px 0 0px;
+}
+.product-logo-full {
+	max-width: 100%;
+	height: auto;
 }
 
 .zoom {
