Fix spelling mistake

--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -54,7 +54,7 @@
     <li class="col w-1-3 hdr">Mailchimp</li>
     <li class="col w-1-3 hdr">Krux</li>
     <li class="col w-1-3 hdr">Alchemetrics</li>
-    <li class="col w-1-3 hdr">Raiail Pro</li>
+    <li class="col w-1-3 hdr">Retail Pro</li>
   </ul>
 
   <p class="pad__top txt--grey hdr normal">And many more…</p>
