--- a/web/workspace/partials/platform/product.dust
+++ b/web/workspace/partials/platform/product.dust
@@ -6,7 +6,7 @@
     <ul class="list--inline medium" style="color:{color}">
       <li><a href="https://github.com/dadi/{product}">Github</a></li>
       <li><a href="https://www.npmjs.com/package/@dadi/{product}">NPM</a></li>
-      <li><a href="https://docs.dadi.tech/api">Documentation</a></li>
+      <li><a href="http://docs.dadi.tech/api">Documentation</a></li>
       <li><a href="/on-demand/">DADI On-demand</a></li>
     </ul>
   </div>
