Decrease point size of grey dividing bars

--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -25,7 +25,7 @@ body.dark {
 		padding-bottom: 40px;
 	}
 	&--divider {
-		border-top: 5px solid $light-grey;
+		border-top: 5px solid #e8f0f7;
 
 		&:first-of-type() {
 			border-top: 0;
