--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -1,6 +1,6 @@
 </main>
 
-<div class="bg--light-grey bdr__top bdr--bdr-grey pad__top--x2 pad__bottom--x2">
+<div class="footer bg--light-grey bdr__top bdr--bdr-grey pad__top--x2 pad__bottom--x2">
   <footer class="small container">
     <div class="bdr__bottom bdr--bdr-grey marg__bottom--x2 pad__bottom">
       <div class="grid feed">
@@ -17,9 +17,9 @@
       <div class="grid marg__top marg__bottom">
         {@iter items=insights from=0 to=3}
           <div class="col w-1-3">
-            <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p>
+            {! <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
             <p class="hdr large txt--blue"><a href="/insight/{handle}/">{attributes.title}</a></p>
-            <p class="fwb small">By {attributes.author}</p>
+            <p class="small txt--mid-grey">By <strong>{attributes.author}</strong></p>
             <p class="small">{@soberMarkdown}{@Truncate data="{attributes.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
             <p class="small"><a href="/insight/{handle}/" class="btn btn--blue">Read more</a></p>
           </div>
