Updated homepage styles

--- a/web/workspace/frontend/sass/parts/variables.scss
+++ b/web/workspace/frontend/sass/parts/variables.scss
@@ -31,7 +31,7 @@ $text:				#111111;
 $black:				#000000;
 $white:				#FFFFFF;
 
-$light-grey:		#FAFAFA;
+$light-grey:		#f2f3f4;
 $grey:				#aaa;
 $mid-grey:			#4B5B5E;
 $dark-grey:			#2C3B3D;
