--- a/web/workspace/frontend/sass/parts/lists.scss
+++ b/web/workspace/frontend/sass/parts/lists.scss
@@ -6,7 +6,7 @@
 	list-style: none;
 
 	li {
-		border-bottom: 1px solid #eee;
+		border-bottom: 1px solid #e8f0f7;
 		padding: 10px 0;
 
 		&:last-of-type {
@@ -15,6 +15,16 @@
 	}
 	a {
 		display: block;
+	}
+}
+.list--line.txt--white {
+	li {
+		border-bottom: 1px solid #122A3A;
+	}
+}
+.footer .list--line {
+	li {
+		border-bottom: 1px solid $bdr-grey;
 	}
 }
 
